--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -39,3 +39,15 @@
     cursor: pointer;
     border-radius: 5px;
 }
+
+.cart-footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 0;
+}
+
+.cart-footer .total {
+    font-size: 25px;
+    color: #2a5ea2;
+}
